update: added info, container hover effects |still no working go top, footer, and nav bar

--- a/future-cyber-threats.html
+++ b/future-cyber-threats.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>ThreatScope</title>
+		<title>Future Cyber Threats</title>
 		<script src='https://cdn.tailwindcss.com'></script>
 		<link rel="stylesheet" href="assets/css/fonts.css">
 	</head>
@@ -289,7 +289,7 @@
 				<div class="flex items-center justify-center">
                     <div class="block px-4">
                         <h4 class="text-5xl font-medium">Future Cyber Threats</h4>
-                        <p class="mt-4 text-gray-200 md:text-left text-justify text-xl">Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis. Pretium tellus duis convallis tempus leo eu aenean.</p>
+                        <p class="mt-4 text-gray-200 md:text-left text-justify text-xl">Welcome to the section on Future Cyber Threats, where we explore the next wave of digital dangers driven by cutting-edge technologies, evolving attack strategies, and the ever-changing cybersecurity landscape</p>
                     </div>
 				</div>
 				<div class="flex justify-center mt-8 px-4 md:mt-0">
@@ -299,91 +299,80 @@
 		</div>
 
 		
-		<div class="md:px-2 px-4 max-w-7xl mx-auto grid md:grid-cols-4 grid-cols-1 gap-4">
-            <div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="https://placehold.co/250x250" class="w-full h-52 object-cover rounded-t">
+		<div class="mt-28 md:px-2 px-4 max-w-6xl mx-auto grid md:grid-cols-4 grid-cols-1 gap-4">
+            <div class="bg-[#141528] rounded text-white border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
+				<img src="./future-cyber-threats/assets/ai-in-hacking.png" class="w-full h-52 object-cover rounded-t">
 				<div class="p-4 space-y-2">
-					<h5 class="text-lg">Software Bugs</h5>
-					<p class="text-sm text-gray-300">Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet consectetur adipiscing elit quisque faucibus ex.</p>
+					<h5 class="text-lg">AI in Hacking</h5>
+					<p class="text-sm text-gray-300">Artificial Intelligence (AI) is becoming a double-edged sword in cybersecurity. As AI continues to evolve, so does the risk of highly automated and unpredictable cyberattacks</p>
 					<div class="mt-2">
-						<a href="#" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
+						<a href="./future-cyber-threats/ai-in-hacking.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
 
-            <div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="https://placehold.co/250x250" class="w-full h-52 object-cover rounded-t">
+            <div class="bg-[#141528] rounded text-white border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
+				<img src="./future-cyber-threats/assets/quantum-computing.png" class="w-full h-52 object-cover rounded-t">
 				<div class="p-4 space-y-2">
-					<h5 class="text-lg">Software Bugs</h5>
-					<p class="text-sm text-gray-300">Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet consectetur adipiscing elit quisque faucibus ex.</p>
+					<h5 class="text-lg">Quantum Computing Risks</h5>
+					<p class="text-sm text-gray-300">Quantum computing could eventually break current encryption methods that protect sensitive data online. This poses a major threat to financial systems, government communications, and digital privacy.</p>
 					<div class="mt-2">
-						<a href="#" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
+						<a href="./future-cyber-threats/quantum-computing-risks.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
 
-            <div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="https://placehold.co/250x250" class="w-full h-52 object-cover rounded-t">
+            <div class="bg-[#141528] rounded text-white border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
+				<img src="./future-cyber-threats/assets/decentralized-finance.png" class="w-full h-52 object-cover rounded-t">
 				<div class="p-4 space-y-2">
-					<h5 class="text-lg">Software Bugs</h5>
-					<p class="text-sm text-gray-300">Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet consectetur adipiscing elit quisque faucibus ex.</p>
+					<h5 class="text-lg">Decentralized Finance (DeFi) and Blockchain Exploits</h5>
+					<p class="text-sm text-gray-300">Decentralized Finance (DeFi) platforms offer financial services without traditional banks. They come with major security challenges that disrupts the operations.</p>
 					<div class="mt-2">
-						<a href="#" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
+						<a href="./future-cyber-threats/decentralized-finance.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
 
-            <div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="https://placehold.co/250x250" class="w-full h-52 object-cover rounded-t">
+            <div class="bg-[#141528] rounded text-white border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
+				<img src="./future-cyber-threats/assets/metaverse.png" class="w-full h-52 object-cover rounded-t">
 				<div class="p-4 space-y-2">
-					<h5 class="text-lg">Software Bugs</h5>
-					<p class="text-sm text-gray-300">Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet consectetur adipiscing elit quisque faucibus ex.</p>
+					<h5 class="text-lg">Exploitation of the Metaverse</h5>
+					<p class="text-sm text-gray-300">The metaverse is a virtual world combining social media, gaming, and digital economies, which opens up new security risks. Identity theft, virtual asset theft, and impersonation are becoming more common.</p>
 					<div class="mt-2">
-						<a href="#" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
+						<a href="./future-cyber-threats/exploitation-of-the-metaverse.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
 
-            <div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="https://placehold.co/250x250" class="w-full h-52 object-cover rounded-t">
+            <div class="bg-[#141528] rounded text-white border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
+				<img src="./future-cyber-threats/assets/biohacking.png" class="w-full h-52 object-cover rounded-t">
 				<div class="p-4 space-y-2">
-					<h5 class="text-lg">Software Bugs</h5>
-					<p class="text-sm text-gray-300">Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet consectetur adipiscing elit quisque faucibus ex.</p>
+					<h5 class="text-lg">Biohacking and Implant Vulnerabilities</h5>
+					<p class="text-sm text-gray-300">Biohacking involves modifying the human body with tech implants like RFID chips or medical devices. These devices can be hacked to track, harm, or control users without their knowledge.</p>
 					<div class="mt-2">
-						<a href="#" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
+						<a href="./future-cyber-threats/biohacking.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
 
-            <div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="https://placehold.co/250x250" class="w-full h-52 object-cover rounded-t">
+            <div class="bg-[#141528] rounded text-white border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
+				<img src="./future-cyber-threats/assets/5g-and-beyond.png" class="w-full h-52 object-cover rounded-t">
 				<div class="p-4 space-y-2">
-					<h5 class="text-lg">Software Bugs</h5>
-					<p class="text-sm text-gray-300">Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet consectetur adipiscing elit quisque faucibus ex.</p>
+					<h5 class="text-lg">5G and Beyond: Hyperconnected Threat Vectors</h5>
+					<p class="text-sm text-gray-300">5G networks bring faster speeds and massive device connectivity, but also create a broader attack surface. The more devices connected, the more potential entry points for hackers.</p>
 					<div class="mt-2">
-						<a href="#" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
+						<a href="./future-cyber-threats/5g-and-beyond.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
 
-            <div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="https://placehold.co/250x250" class="w-full h-52 object-cover rounded-t">
+            <div class="bg-[#141528] rounded text-white border border-indigo-900 hover:bg-[#1D1F3E] ease duration-300">
+				<img src="./future-cyber-threats/assets/smart-city.png" class="w-full h-52 object-cover rounded-t">
 				<div class="p-4 space-y-2">
-					<h5 class="text-lg">Software Bugs</h5>
-					<p class="text-sm text-gray-300">Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet consectetur adipiscing elit quisque faucibus ex.</p>
+					<h5 class="text-lg">Smart City Infrastructure Attacks</h5>
+					<p class="text-sm text-gray-300">Smart cities rely on technology to manage services like traffic, utilities, and surveillance, making them targets for cyberattacks. Hackers could disable traffic systems, tamper with power grids, or manipulate public safety alerts. </p>
 					<div class="mt-2">
-						<a href="#" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
-					</div>
-				</div>
-			</div>
-
-            <div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="https://placehold.co/250x250" class="w-full h-52 object-cover rounded-t">
-				<div class="p-4 space-y-2">
-					<h5 class="text-lg">Software Bugs</h5>
-					<p class="text-sm text-gray-300">Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet consectetur adipiscing elit quisque faucibus ex.</p>
-					<div class="mt-2">
-						<a href="#" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
+						<a href="./future-cyber-threats/smart-city.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
 					</div>
 				</div>
 			</div>
