--- a/future-cyber-threats/5g-and-beyond.html
+++ b/future-cyber-threats/5g-and-beyond.html
@@ -292,11 +292,11 @@
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
 				<h4 class="text-6xl font-medium">5G and Beyond: Hyperconnected Threat Vectors</h4>
-                <div class="flex items-center space-x-4 mt-4 justify-center">
-                    <a href="">Overview </a>
-                    <a href="">How It Works</a>
-                    <a href="">People At Risk</a>
-                    <a href="">How to Prepare</a>
+                <div class="flex items-center space-x-4 mt-8 justify-center">
+                    <a href="#overview" class="hover:underline">Overview</a>
+                    <a href="#how-it-works" class="hover:underline">How It Works</a>
+                    <a href="#people-at-risk" class="hover:underline">People At Risk</a>
+                    <a href="#how-to-prepare" class="hover:underline">How to Prepare</a>
                 </div>
 			</div>
 		</div>
@@ -304,7 +304,7 @@
       <div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
         
         <div class="space-y-4">
-          <h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+          <h4 class="font-medium text-2xl text-[#E2C8F1]" id="overview">Overview</h4>
           <p>
             5G and next-gen networks support massive device connectivity and low latency, but they also introduce new attack surfaces. With the proliferation of IoT, vehicles, and critical infrastructure depending on these networks, attackers can exploit vulnerabilities in protocols or device firmware. The speed and scale of 5G increase the difficulty of threat detection and response.
           </p>
