update: fixed padding

--- a/legal-and-ethical-consequences.html
+++ b/legal-and-ethical-consequences.html
@@ -285,11 +285,11 @@
                 </div>
             </nav>
 
-			<div class="max-w-7xl mx-auto">
+			<div class="md:px-2 px-4 max-w-6xl mx-auto">
                 <div class="flex items-center text-gray-300 space-x-2 mt-10">
-                    <a class="text-sm" href="#">Companies Affected</a>
+                    <a class="text-sm" href="./companies-affected.html">Companies Affected</a>
                     <span class="text-gray-300 text-sm">/</span>
-                    <a href="#" class="text-sm">Legal and Ethical Consequences</a>
+                    <a href="./legal-and-ethical-consequences.html" class="text-sm">Legal and Ethical Consequences</a>
                 </div>
                 <div class="grid grid-cols-2 gap-4 md:px-2 px-4">
                     <div class="max-w-7xl mx-auto flex items-center justify-center">
@@ -304,7 +304,7 @@
 			</div>
 		</div>
 
-		<div class="mt-10 space-y-8 max-w-7xl mx-auto">
+		<div class="md:px-2 px-4 mt-10 space-y-8 max-w-6xl mx-auto">
             <div class="space-y-4 bg-[#111436] p-6 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">Liability and Accountability</h4>
                 <p>When companies fail to protect personal data, they can be held legally and financially responsible. Under GDPR, companies can be fined heavily and must demonstrate that they took proper steps to protect data. CCPA allows consumers to sue companies for negligence after a data breach. Executives and IT teams may face internal consequences like termination or demotion. Ignoring security risks is seen as a failure of duty, not just bad management. Laws like GDPR and CCPA are making it clear that accountability for data breaches goes all the way to the top. Legal action can follow if businesses are found to be negligent. Maintaining cybersecurity is a legal requirement, not just a best practice.</p>
@@ -312,7 +312,7 @@
 
 
 
-            <div class="space-y-4" id="data-compromised">
+            <div class="md:px-2 px-4 space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Laws and Regulations</h4>
                 <ul class="space-y-4">
                     <li class="space-y-2">
@@ -338,8 +338,8 @@
                     </summary>
                     <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
                     <ul class="list-disc list-inside space-y-1">
-                        <li>https://commission.europa.eu/law/law-topic/data-protection_en</li>
-                        <li>https://oag.ca.gov/privacy/ccpa</li>
+                        <li>Data protection. (n.d.). European Commission. https://commission.europa.eu/law/law-topic/data-protection_en</li>
+                        <li>California Consumer Privacy Act (CCPA). (2025, January 28). State of California - Department of Justice - Office of the Attorney General. https://oag.ca.gov/privacy/ccpa</li>
                     </ul>
                     </div>
                 </details>
