--- a/concept-of-cybersecurity/prominent-hackers.html
+++ b/concept-of-cybersecurity/prominent-hackers.html
@@ -31,8 +31,13 @@
             </nav>
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent to-black"></div>
-			<div class="relative max-w-4xl mx-auto mt-40">
-				<h4 class="text-6xl font-medium">Prominent Ethical Hackers</h4>
+            <div class="relative max-w-6xl mx-auto text-left z-10">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
+                    <a class="text-sm" href="../concepts-of-cybersecurity.html">Concepts of Cybersecurity</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="#" class="text-sm">Prominent Ethical Hackers</a>
+                </div>
+				<h4 class="text-6xl font-medium text-center mt-24">Prominent Ethical Hackers</h4>
 			</div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528] pt-24 space-y-6 px-2">
