added breadcrumbs famous-cyber-attacks

--- a/famous-cyber-attacks/2016-comelec-data-breach.html
+++ b/famous-cyber-attacks/2016-comelec-data-breach.html
@@ -290,30 +290,36 @@
             </nav>
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
-			<div class="relative mt-48 max-w-4xl mx-auto">
-				<h4 class="text-6xl font-medium">2016 COMELEC Data Breach</h4>
-                    <div class="flex items-center space-x-4 mt-4 justify-center">
-                        <a href="">Overview </a>
-                        <a href="">Method of Attack</a>
-                        <a href="">Impact and Consequences</a>
-                    </div>
-			</div>
+
+            <div class="relative max-w-6xl mx-auto mt-20 text-left z-10">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
+                    <a class="text-sm" href="../famous-cyber-attacks.html">Famous Cyber Attacks</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="#" class="text-sm">2016 COMELEC Data Breach</a>
+                </div>
+                <h4 class="text-6xl font-medium text-center mt-20">2016 COMELEC Data Breach</h4>
+                <div class="flex items-center space-x-4 mt-4 justify-center">
+                    <a href="#overview">Overview </a>
+                    <a href="#method-of-attack">Method of Attack</a>
+                    <a href="#impact-and-consequences">Impact and Consequences</a>
+                </div>
+            </div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528] text-justify">
             
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+                    <h4 id="overview" class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
                     <p>The Philippines' Commission on Elections (COMELEC) experienced a massive data breach in March 2016. Hackers gained access to the database holding the personal data of approximately 55 million registered voters by taking advantage of flaws in the COMELEC website. The hacking organization "LulzSec Pilipinas," which conducted out the attack, posted some of the stolen material online. Full names, residences, dates of birth, and passport numbers were among the personal information that was made public. This turned into one of the biggest data breaches ever involving the government. It brought out major problems with Philippine government agencies' cybersecurity standards. The trust of the public in the electoral system was severely harmed by the breach. Millions of dollars were spent by COMELEC to control the incident's consequences.
                     </p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
+                    <h4 id="method-of-attack" class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
                     <p>To take advantage of vulnerabilities in the COMELEC website, the attackers employed SQL injection techniques. They obtained sensitive voter data by manipulating the website's database through the injection of malicious SQL queries. Outdated software, poor passwords, and improper data encryption all contributed to the system's breach. Hackers were successful in extracting and later exposing the personal information of millions of voters. If left unchecked, SQL injection is a dangerous web application vulnerability that can result in significant data breaches.
                     </p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
+                    <h4 id="impact-and-consequences" class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
