--- a/famous-cyber-attacks/pegasus-spyware.html
+++ b/famous-cyber-attacks/pegasus-spyware.html
@@ -291,15 +291,21 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
 
-            <div class="relative mt-48 max-w-4xl mx-auto">
-                
-				<h4 class="text-6xl font-medium">Pegasus Spyware</h4>
-                    <div class="flex items-center space-x-4 mt-4 justify-center">
-                        <a href="">Overview </a>
-                        <a href="">Method of Attack</a>
-                        <a href="">Impact and Consequences</a>
-                    </div>
-			</div>
+            
+
+            <div class="relative max-w-6xl mx-auto mt-20 text-left z-10">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
+                    <a class="text-sm" href="../famous-cyber-attacks.html">Famous Cyber Attacks</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="#" class="text-sm">Pegasus Spyware</a>
+                </div>
+                <h4 class="text-6xl font-medium text-center mt-20">Pegasus Spyware</h4>
+                <div class="flex items-center space-x-4 mt-4 justify-center">
+                    <a href="#overview">Overview </a>
+                    <a href="#method-of-attack">Method of Attack</a>
+                    <a href="#impact-and-consequences">Impact and Consequences</a>
+                </div>
+            </div>
 
 
 			
@@ -307,17 +313,17 @@
 		<div class="bg-gradient-to-b from-black to-[#141528] text-justify">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+                    <h4 id="overview" class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
                     <p>A worldwide scandal, the Pegasus spyware show included the illegal monitoring of government officials, journalists, activists, and politicians. It was found in 2016 after a cybersecurity lab received a suspicious communication from a human rights activist in the United Arab Emirates. The attacks happened all across the world, including in the US, Mexico, Saudi Arabia, and France. Without user intervention, Pegasus could infect devices running Symbian, Android, iOS, BlackBerry, and Windows Phone. The Israeli business that created Pegasus, NSO Group, claimed that it only supplied government organizations with the spyware to combat terrorism and criminal activity. However, it was discovered that many democratic and authoritarian governments used it against critics and dissidents. Each installation of the spyware cost hundreds of thousands of dollars. 
                     </p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
+                    <h4 id="method-of-attack" class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
                     <p>Pegasus used "zero-click" exploits to infect devices, which meant that users didn't have to interact with the malware in order to get infected. Attackers installed Pegasus secretly on victims' phones by taking advantage of flaws in apps like WhatsApp. Once inside, the spyware rooted Android devices or jailbroken iPhones to get around security measures. Pegasus provided complete access to encrypted data, cameras, microphones, conversations, and texts. Attackers used social engineering techniques, such as phony communications, to tempt users if zero-click failed.
                     </p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
+                    <h4 id="impact-and-consequences" class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
