--- a/famous-cyber-attacks/sony-picture-hack.html
+++ b/famous-cyber-attacks/sony-picture-hack.html
@@ -291,30 +291,36 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
 
-            <div class="relative mt-48 max-w-4xl mx-auto">
-                
-				<h4 class="text-6xl font-medium">Sony Pictures</h4>
-                    <div class="flex items-center space-x-4 mt-4 justify-center">
-                        <a href="">Overview </a>
-                        <a href="">Method of Attack</a>
-                        <a href="">Impact and Consequences</a>
-                    </div>
-			</div>
+            
+
+            <div class="relative max-w-6xl mx-auto mt-20 text-left z-10">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
+                    <a class="text-sm" href="../famous-cyber-attacks.html">Famous Cyber Attacks</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="#" class="text-sm">Sony Picture</a>
+                </div>
+                <h4 class="text-6xl font-medium text-center mt-20">Sony Picture</h4>
+                <div class="flex items-center space-x-4 mt-4 justify-center">
+                    <a href="#overview">Overview </a>
+                    <a href="#method-of-attack">Method of Attack</a>
+                    <a href="#impact-and-consequences">Impact and Consequences</a>
+                </div>
+            </div>
 
 			
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528] text-justify">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+                    <h4 id="overview" class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
                     <p>The Sony Pictures hack occurred in November 2014 and is widely attributed to North Korea state-sponsored hackers. Hackers infiltrated Sony’s network, stole sensitive data, and deployed destructive malware that wiped computer systems. They leaked confidential emails, employee personal data, unreleased films, and internal company documents. The attack coincided with the planned release of The Interview, a film satirizing North Korean leadership. Hackers issued threats against movie theaters showing the film, causing Sony to initially cancel its release. U.S. intelligence agencies linked the attack to North Korea's government. The incident marked a significant escalation of state-sponsored cyber retaliation against corporations.</p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
+                    <h4 id="method-of-attack" class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
                     <p>The attackers used highly targeted spear-phishing emails to gain access to Sony’s internal network. After establishing a foothold, they escalated privileges and exfiltrated large volumes of data over months. They deployed the Destover malware (also known as WIPALL) to wipe systems and destroy data. The attack combined espionage, sabotage, and public threats, a rare combination in corporate cyberattacks. It highlighted the evolving threat of politically motivated hacking.</p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
+                    <h4 id="impact-and-consequences" class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
