--- a/famous-cyber-attacks/Yahoo-Data-Breaches.html
+++ b/famous-cyber-attacks/Yahoo-Data-Breaches.html
@@ -291,31 +291,34 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
 
-            <div class="relative mt-48 max-w-4xl mx-auto">
-                
-                
-				<h4 class="text-6xl font-medium">Yahoo Data Breaches</h4>
-                    <div class="flex items-center space-x-4 mt-4 justify-center">
-                        <a href="">Overview </a>
-                        <a href="">Method of Attack</a>
-                        <a href="">Impact and Consequences</a>
-                    </div>
-			</div>
+            <div class="relative max-w-6xl mx-auto mt-20 text-left z-10">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
+                    <a class="text-sm" href="../famous-cyber-attacks.html">Famous Cyber Attacks</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="#" class="text-sm">Yahoo Data Breaches</a>
+                </div>
+                <h4 class="text-6xl font-medium text-center mt-20">Yahoo Data Breaches</h4>
+                <div class="flex items-center space-x-4 mt-4 justify-center">
+                    <a href="#overview">Overview </a>
+                    <a href="#method-of-attack">Method of Attack</a>
+                    <a href="#impact-and-consequences">Impact and Consequences</a>
+                </div>
+            </div>
 
 			
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528] text-justify">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+                    <h4 id="overview" class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
                     <p>The Yahoo data breaches were among the largest known breaches in internet history. They occurred between 2013 and 2014 but were only disclosed to the public in 2016. The breaches compromised data from all 3 billion Yahoo accounts. Stolen information included names, email addresses, hashed passwords, and security questions and answers. Yahoo initially underestimated the number of affected users, leading to significant public backlash. Nation-state actors were suspected to be involved in at least one of the breaches. The late disclosure and mishandling of the breach damaged Yahoo’s reputation severely. It also significantly impacted Yahoo’s acquisition by Verizon.</p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
+                    <h4 id="method-of-attack" class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
                     <p>Attackers used spear-phishing tactics to gain initial access to Yahoo’s systems. Once inside, they forged authentication cookies, allowing them to access accounts without needing passwords. The breaches were persistent, with hackers maintaining long-term access to Yahoo's user database. Although no financial data was reported stolen, the personal information compromised created long-term risks for users. The main threat involved credential theft and account compromise across multiple platforms.</p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
+                    <h4 id="impact-and-consequences" class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
