--- a/famous-cyber-attacks/lockbit-ransom.html
+++ b/famous-cyber-attacks/lockbit-ransom.html
@@ -291,15 +291,21 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
 
-            <div class="relative mt-48 max-w-4xl mx-auto">
-                
-				<h4 class="text-6xl font-medium">LockBit Ransomware</h4>
-                    <div class="flex items-center space-x-4 mt-4 justify-center">
-                        <a href="">Overview </a>
-                        <a href="">Method of Attack</a>
-                        <a href="">Impact and Consequences</a>
-                    </div>
-			</div>
+            
+
+            <div class="relative max-w-6xl mx-auto mt-20 text-left z-10">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
+                    <a class="text-sm" href="../famous-cyber-attacks.html">Famous Cyber Attacks</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="#" class="text-sm">LockBit Ransomware</a>
+                </div>
+                <h4 class="text-6xl font-medium text-center mt-20">LockBit Ransomware</h4>
+                <div class="flex items-center space-x-4 mt-4 justify-center">
+                    <a href="#overview">Overview </a>
+                    <a href="#method-of-attack">Method of Attack</a>
+                    <a href="#impact-and-consequences">Impact and Consequences</a>
+                </div>
+            </div>
 
 
 			
@@ -307,18 +313,18 @@
 		<div class="bg-gradient-to-b from-black to-[#141528] text-justify">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+                    <h4 id="overview" class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
                     <p>LockBit ransomware attacks first emerged in 2020 and have rapidly become one of the most dominant ransomware threats globally. The group operates a Ransomware-as-a-Service (RaaS) model, enabling affiliates to launch attacks using LockBit's tools. LockBit is known for its fast encryption speeds and double extortion tactics, where data is both encrypted and stolen. The group has targeted various sectors, including healthcare, manufacturing, education, and government. LockBit consistently updates its malware, releasing new versions like LockBit 2.0, 3.0, and LockBit Black. Their attacks often include threats to leak data unless ransom demands are met. Despite law enforcement crackdowns, LockBit remains highly active as of 2025. It continues to be a major player in the global ransomware ecosystem.
 
                     </p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
+                    <h4 id="method-of-attack" class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
                     <p>LockBit affiliates often use phishing emails, exposed Remote Desktop Protocol (RDP) servers, or stolen credentials to access networks. Once inside, they move laterally and deploy the ransomware payload to encrypt critical systems. The malware uses strong encryption algorithms and can automate parts of the attack to maximize damage quickly. LockBit operators also steal sensitive data before encryption for additional leverage. Their approach combines both ransomware and data exfiltration threats.
                     </p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
+                    <h4 id="impact-and-consequences" class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
