--- a/famous-cyber-attacks/not-petya.html
+++ b/famous-cyber-attacks/not-petya.html
@@ -291,33 +291,37 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
 
-            <div class="relative mt-48 max-w-4xl mx-auto">
-                
-                <h4 class="text-6xl font-medium">Notpetya Ransomware Outbreak</h4>
-				<div class="flex items-center space-x-4 mt-4 justify-center">
-                    <a href="">Overview </a>
-                    <a href="">Method of Attack</a>
-                    <a href="">Impact and Consequences</a>
-                </div>
-			</div>
 
+            <div class="relative max-w-6xl mx-auto mt-20 text-left z-10">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
+                    <a class="text-sm" href="../famous-cyber-attacks.html">Famous Cyber Attacks</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="#" class="text-sm">Notpetya Ransomware Outbreak</a>
+                </div>
+                <h4 class="text-6xl font-medium text-center mt-20">Notpetya Ransomware Outbreak</h4>
+                <div class="flex items-center space-x-4 mt-4 justify-center">
+                    <a href="#overview">Overview </a>
+                    <a href="#method-of-attack">Method of Attack</a>
+                    <a href="#impact-and-consequences">Impact and Consequences</a>
+                </div>
+            </div>
 			
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528] text-justify">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+                    <h4 id="overview" class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
                     <p>On June 27, 2017, the NotPetya ransomware outbreak occurred, causing major damage to infrastructure and companies across the globe. Organizations in Ukraine, including banks, telecom providers, and energy corporations, were the main targets of the attack. However, the impact was seen globally as well because multinational corporations like Maersk and Rosneft were also compromised. Later, it was discovered that NotPetya was a harmful wiper disguising as ransomware. The infection made systems unusable and encrypted data, making it impossible to recover the data. It propagated quickly throughout networks by taking advantage of several strategies. The attack resulted in significant financial damages and forced businesses to stop operations. When it comes to the disruption of worldwide operations, this cyberattack is regarded as one of the most catastrophic.
 
                     </p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
+                    <h4 id="method-of-attack" class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
                     <p>NotPetya infected systems by overwriting the Master Boot Record (MBR) with malicious code that triggered upon reboot. It initially spread through a compromised software update from MeDoc, a Ukrainian accounting software vendor. After infecting a machine, it harvested admin credentials to move laterally using tools like PSEXEC and WMI. It also exploited the EternalBlue vulnerability internally, but not across the internet. The ransomware-like message demanded payment in Bitcoin, but recovery was impossible as the communication email was disabled. Analysts concluded it was a wiper disguised as ransomware, aiming more for disruption than profit.
                     </p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
+                    <h4 id="impact-and-consequences" class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
