--- a/famous-cyber-attacks/the-aws-ddos-attack.html
+++ b/famous-cyber-attacks/the-aws-ddos-attack.html
@@ -291,32 +291,38 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
 
-            <div class="relative mt-48 max-w-4xl mx-auto">
-                
-				<h4 class="text-6xl font-medium">The AWS DDoS Attack</h4>
-                    <div class="flex items-center space-x-4 mt-4 justify-center">
-                        <a href="">Overview </a>
-                        <a href="">Method of Attack</a>
-                        <a href="">Impact and Consequences</a>
-                    </div>
-			</div>
+        
+
+            <div class="relative max-w-6xl mx-auto mt-20 text-left z-10">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
+                    <a class="text-sm" href="../famous-cyber-attacks.html">Famous Cyber Attacks</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="#" class="text-sm">The AWS DDoS Attack</a>
+                </div>
+                <h4 class="text-6xl font-medium text-center mt-20">The AWS DDoS Attack</h4>
+                <div class="flex items-center space-x-4 mt-4 justify-center">
+                    <a href="#overview">Overview </a>
+                    <a href="#method-of-attack">Method of Attack</a>
+                    <a href="#impact-and-consequences">Impact and Consequences</a>
+                </div>
+            </div>
 
 			
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528] text-justify">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+                    <h4 id="overview" class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
                     <p>The biggest Distributed Denial of Service (DDoS) attack ever recorded occurred against Amazon Web Services (AWS) in Q1 2020, with a speed of 2.3 Tbps. The attack broke the previous record set by GitHub's DDoS attack in 2018 and was made public by AWS. This major cyber incident brought to light the increasing strength and danger present-day DDoS attacks. It demonstrated the need for corporations to constantly improve their defenses against changing threats. Although the hack primarily targeted AWS's cloud infrastructure, it affected users globally. It was the biggest attack ever made public, but it wasn't the biggest attack ever (based on other private reports). The event reaffirmed how crucial it is for cybersecurity to embrace a Zero-Trust mindset.
                     </p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
+                    <h4 id="method-of-attack" class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
                     <p>A CLDAP (Connection-less Lightweight Directory Access Protocol) reflection and amplification attack was used to breach the AWS system. Attackers greatly increased their traffic against AWS servers by using open and unsecured CLDAP servers. Attackers were able to increase the amount of their first attack requests by up to 56–70 times using this technique. Since CLDAP servers answered fake queries, it was challenging to identify the actual attackers. A reflection/amplification DDoS assault that took advantage of UDP flaws was the main threat employed.
                     </p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
+                    <h4 id="impact-and-consequences" class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
