--- a/future-cyber-threats/decentralized-finance.html
+++ b/future-cyber-threats/decentralized-finance.html
@@ -290,13 +290,18 @@
             </nav>
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
-			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">Decentralized Finance (DeFi) and Blockchain Exploits</h4>
-                <div class="flex items-center space-x-4 mt-4 justify-center">
-                    <a href="">Overview </a>
-                    <a href="">How It Works</a>
-                    <a href="">People At Risk</a>
-                    <a href="">How to Prepare</a>
+			<div class="relative max-w-6xl mx-auto text-left z-10 mt-24">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
+                    <a class="text-sm" href="../future-cyber-threats.html">Future Cyber Threats</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="#" class="text-sm">Decentralized Finanace and Blockchain Exploits</a>
+                </div>
+				<h4 class="text-6xl font-medium mt-24 text-center">Decentralized Finanace and Blockchain Exploits</h4>
+                <div class="flex items-center space-x-4 mt-8 justify-center">
+                    <a href="#overview" class="hover:underline">Overview</a>
+                    <a href="#how-it-works" class="hover:underline">How It Works</a>
+                    <a href="#people-at-risk" class="hover:underline">People At Risk</a>
+                    <a href="#how-to-prepare" class="hover:underline">How to Prepare</a>
                 </div>
 			</div>
 		</div>
